kubernetes/resources.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: risingcode
  labels:
    app: risingcode
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: risingcode
  template:
    metadata:
      labels:
        app: risingcode
    spec:
      volumes:
      - name: sharedfs
        hostPath:
          path: /mnt/gaia/risingcode-db
          type: DirectoryOrCreate
      containers:
      - name: risingcode
        image: risingcode:latest
        imagePullPolicy: IfNotPresent
        #command: ["bundle", "exec", "falcon", "-b", "tcp://0.0.0.0", "-p", "3000"]
        command: ["bundle", "exec", "rackup", "-o", "0.0.0.0", "-p", "3000", "config.ru"]
        #command: ["sleep", "infinity"]
        volumeMounts:
        - name: sharedfs
          mountPath: /home/application/db
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: 200M
            cpu: 100m
          requests:
            memory: 100M
            cpu: 10m
      - name: documentation
        image: risingcode:latest
        imagePullPolicy: IfNotPresent
        command: ["bundle", "exec", "ruby", "documentation_server.rb"]
        volumeMounts:
        - name: sharedfs
          mountPath: /home/application/db
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: 200M
            cpu: 100m
          requests:
            memory: 100M
            cpu: 10m
---
apiVersion: v1
kind: Service
metadata:
  name: risingcode-service
spec:
  type: NodePort
  selector:
    app: risingcode
  ports:
  - protocol: TCP
    name: risingcode
    port: 3000
    nodePort: 30046

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: risingcode-vhost
  annotations:
    ingress.class: wkndr
spec:
  rules:
  - host: risingcode.com
    http:
      paths:
      - backend:
          serviceName: risingcode-service
          servicePort: 3000
